projet_gl/src/test/deca/context/valid/3_07/3_07_1_Declfield.deca
// Description:
//    Decl Field With Initialization
//
// Resultats:
//    ok
//
// Historique:
//    cree le 17/01/2024

class A {
    int field1 = 1;
}